@@ -1,4 +1,4 @@
-# Explanations to the arguments; read these first to customise the settings to suit your system :
+# Explanations to vague argument names; read these first to customise the settings to suit your system :
 
 "-d64" - Makes Minecraft run as a 64-bit program; only use this if your operating system is 64-bit, otherwise remove this parameter.
 
@@ -10,5 +10,13 @@
 
 "-XX:ParallelGCThreads=4" - Sets it to the amount of logical processors (threads) your CPU has.
 
-# The arguments :
--XX:+UnlockExperimentalVMOptions -d64 -Xmx 2G -Xms 2G –XX:+UseParallelGC -XX:ParallelGCThreads=4 XX:+AggressiveOpts -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+UseNUMA -XX:+CMSParallelRemarkEnabled -XX:+UseAdaptiveGCBoundary -XX:-UseGCOverheadLimit -XX:+UseBiasedLocking -Dfml.ignorePatchDiscrepancies=true -Dfml.ignoreInvalidMinecraftCertificates=true -XX:+UseFastAccessorMethods -XX:+UseCompressedOops -XX:MaxGCPauseMillis=30  -XX:SurvivorRatio=8 -XX:TargetSurvivorRatio=90 -XX:MaxTenuringThreshold=15 -XX:SoftRefLRUPolicyMSPerMB=4000 -XX:ReservedCodeCacheSize=1024m -XX:+OptimizeStringConcat -XX:+UseCodeCacheFlushing
+"-XX:+UseParNewGC" - A newer version of "-XX:+UseParallelGC".
+
+"XX:+AggressiveOpts" - Makes Minecraft use aggressive optimisation.
+
+"-XX:+OptimizeStringConcat" - Optimises concatenation on strings.
+
+"-XX:+CMSParallelRemarkEnabled" -Makes CMS remarking parallel to program execution.
+
+# The arguments (fitted to my system) :
+-XX:+UnlockExperimentalVMOptions -d64 -Xmx 2G -Xms 2G -XX:+UseParNewGC -XX:ParallelGCThreads=4 -XX:+CMSParallelRemarkEnabled -XX:+UseConcMarkSweepGC -XX:+UseAdaptiveGCBoundary -XX:-UseGCOverheadLimit -XX:+AggressiveOpts -XX:+UseNUMA -XX:+UseBiasedLocking -Dfml.ignorePatchDiscrepancies=true -Dfml.ignoreInvalidMinecraftCertificates=true -XX:+UseFastAccessorMethods -XX:MaxGCPauseMillis=30  -XX:SurvivorRatio=8 -XX:TargetSurvivorRatio=90 -XX:MaxTenuringThreshold=15 -XX:SoftRefLRUPolicyMSPerMB=4000 -XX:ReservedCodeCacheSize=1024m -XX:+OptimizeStringConcat -XX:+UseCodeCacheFlushing
